# whatsapp-desktop-fast

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  remove_ad.js  tauri.conf.json
docs/: index.html
src/: main.rs
src-tauri/: Cargo.toml  remove_ad.js  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
