[package]
name = "WhatsApp"
version = "0.1.0"
description = "Wpp but works"
authors = ["https://github.com/leonardo-matheus"]
license = "MIT"
repository = ""
default-run = "WhatsApp"
edition = "2021"
rust-version = "1.63"  

[build-dependencies]
tauri-build = { version = "1.3", features = [] }  

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3", features = ["api-all", "system-tray"] } 

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
