[package]
name = "WhatsApp"
version = "0.1.0"
description = "Wpp but works"
authors = ["https://github.com/leonardo-matheus"]
license = "MIT"
repository = ""
default-run = "WhatsApp"
edition = "2021"
rust-version = "1.77"  

[build-dependencies]
tauri-build = { version = "2", features = [] }  

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
