[package]
name = "whatsapp-lite"
version = "1.0.0"
description = "WhatsApp Desktop ultra-leve em Rust - usa apenas 1MB de RAM vs 500MB+ do oficial"
authors = ["Leonardo Matheus <https://github.com/leonardo-matheus>"]
license = "MIT"
repository = "https://github.com/leonardo-matheus/whatsapp-desktop-fast"
homepage = "https://github.com/leonardo-matheus/whatsapp-desktop-fast"
readme = "../README.md"
keywords = ["whatsapp", "desktop", "tauri", "lightweight", "rust"]
categories = ["gui", "web-programming"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
# Otimizações agressivas para menor tamanho e melhor performance
lto = true           # Link-Time Optimization
codegen-units = 1    # Melhor otimização
panic = "abort"      # Menor binário
strip = true         # Remove símbolos de debug
opt-level = "z"      # Otimiza para tamanho
